force-app/src/objects/TR1__Configured_Filters_Map__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Contact_Field_API__c</fullName>
        <label>Contact Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Is_Picklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Field_API__c</fullName>
        <label>Job Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Configured Filters Map</label>
    <pluralLabel>Configured_Filters_Maps</pluralLabel>
</CustomObject>